compiler/tests/en/errors/pkg_export.salam
// EXPECT: E017
import "math"
func main:
    println math.sqrt(16.0)
end
